Archive2/dd/0f17831bc57225/output
main.cpp:1:17: error: variable or field ‘Error’ declared void
 void Error(std::vector<Wide::Lexer::Range>, Parser::Error);
                 ^
main.cpp:1:12: error: ‘vector’ is not a member of ‘std’
 void Error(std::vector<Wide::Lexer::Range>, Parser::Error);
            ^
main.cpp:1:24: error: ‘Wide’ has not been declared
 void Error(std::vector<Wide::Lexer::Range>, Parser::Error);
                        ^
main.cpp:1:43: error: expected primary-expression before ‘,’ token
 void Error(std::vector<Wide::Lexer::Range>, Parser::Error);
                                           ^
main.cpp:1:45: error: ‘Parser’ has not been declared
 void Error(std::vector<Wide::Lexer::Range>, Parser::Error);
                                             ^
